# ai-intel

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 5378ccff75d9_create_items_table_and_vector_extension.py  80192a6e674a_add_hnsw_vector_index_on_items_embedding.py
scripts/: _commit_msg_parta.txt  _commit_msg_partb.txt  check_algolia.py  check_algolia2.py  check_algolia3.py  check_algolia4.py  check_algolia5.py  check_algolia6.py  check_sources.py  check_yc.py  dev.sh  smoke_retrieval.py  test_api.py  verify_openai_tools.py  verify_pgvector.py
src/ai_intel/: __init__.py  cli.py  config.py  db.py
src/ai_intel/agent/: __init__.py  agent.py
src/ai_intel/api/: main.py
src/ai_intel/api/routes/: query.py
src/ai_intel/embeddings/: embedder.py  pipeline.py  repository.py
src/ai_intel/mcp_server/: __init__.py
src/ai_intel/models/: __init__.py  item.py
src/ai_intel/observability/: __init__.py
src/ai_intel/rag/: __init__.py
src/ai_intel/retrieval/: search.py  tools.py
src/ai_intel/sources/: __init__.py  base.py  github.py  hackernews.py  repository.py  runner.py  ycombinator.py
tests/: conftest.py  test_health.py
tests/agent/: test_agent.py  test_query_endpoint.py
tests/embeddings/: test_embedder.py  test_pipeline.py
tests/retrieval/: test_search.py  test_tools.py
tests/sources/: test_base.py  test_github.py  test_hackernews.py  test_repository.py  test_ycombinator.py
